fixed spacing of cards in exp section, footer work

--- a/src/components/Experience/ExperienceCard.scss
+++ b/src/components/Experience/ExperienceCard.scss
@@ -120,3 +120,9 @@
     padding-bottom: 15px;
     list-style-type: none;
 }
+
+@media (min-width: 450px ) {
+    .full-exp-card {
+        min-width: 300px;
+    }
+}
