--- a/src/sections/ContactMeSection/ContactMeSection.scss
+++ b/src/sections/ContactMeSection/ContactMeSection.scss
@@ -4,7 +4,7 @@
     width: 100%;
     min-height: 100vh;
     padding-top: 100px;
-    padding-bottom: 25px;
+    position: relative;
 }
 
 // .contact-me-section-body {
@@ -20,6 +20,17 @@
     margin-left: 30px;
     margin-right: 30px;
 }
+
+// .socials-footer {
+//     position: relative;
+//     bottom: 0;
+//     margin-bottom: 25px;
+//     height: 70px;
+//     width: 100%;
+//     margin-left: auto;
+//     margin-right: auto;
+//     clear: both;
+// }
 
 
 @media (min-width: 769px ) {
