--- a/src/sections/ExperienceSection/ExperienceSection.scss
+++ b/src/sections/ExperienceSection/ExperienceSection.scss
@@ -18,3 +18,22 @@
     margin-bottom: 30px;
     margin-top: 0px;
 }
+
+.experience-cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    // padding: 60px;
+    align-items: center;
+    justify-content: center;
+}
+
+.exp-card-instance {
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
+// @media (min-width: 769px ) {
+//     .experience-cards-container {
+
+//     }
+// }
